--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "ipykernel>=6.29.5",
+    "matplotlib>=3.9.4",
     "numpy>=2.0.2",
 ]
